--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -1,6 +1,10 @@
-<div class="cart">
-  <a href="/cart/index.html">
-    <button>Cart</button>
-    <span class="cart-count"></span>
+<div class="logo">
+  <!-- <img src="/images/noun_Tent_2517.svg" alt="Recipe Pocket logo" /> -->
+  <h1><a href="/index.html">Recipe Pocket</a></h1>
+</div>
+<div class="list">
+  <a href="/list/index.html">
+    <button>List</button>
+    <span class="recipe-list-count"></span>
   </a>
 </div>
