--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -4,7 +4,7 @@
 </div>
 <div class="list">
   <a href="/list/index.html">
-    <button>List</button>
+    <button>Pocket</button>
     <span class="recipe-list-count"></span>
   </a>
 </div>
